--- a/templates/random.html
+++ b/templates/random.html
@@ -61,7 +61,7 @@
 
     <h1>Welcome to the Land of Randomness!</h1>
 
-    <img src="https://placekitten.com/300/300" alt="Random Kitten">
+    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTIlI_Ov4ZVi6lPHQp2Wq9aTwepVL6xItPTXg&s" alt="Random Kitten">
 
     <div class="fact">
         Did you know? A group of flamingos is called a "flamboyance"!
