--- a/templates/home.html
+++ b/templates/home.html
@@ -52,8 +52,23 @@
     </style>
 </head>
 <body>
-    <header>
-        <h1>Welcome to My Home Page</h1>
+    <header style="display: flex; justify-content: center; align-items: center; padding: 10px; position: relative;">
+        <h1 style="text-align: center; margin: 5px;">
+            {% if user.is_authenticated %}
+                Welcome, {{ user.username }}!
+            {% else %}
+                Home page.
+            {% endif %}
+        </h1>
+
+        <div style="position: absolute; right: 10px;">
+            {% if user.is_authenticated %}
+                <a href="{% url 'logout' %}" style="margin-left: 15px;">Logout</a>
+            {% else %}
+                <a href="{% url 'login' %}" style="margin-left: 15px;">Login</a>
+                <a href="{% url 'register' %}" style="margin-left: 15px;">Register</a>
+            {% endif %}
+        </div>
     </header>
 
     <nav>
